--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,9 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-DB_HOST=mysql
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=policrush
+DB_DATABASE=policrushes
 DB_USERNAME=root
 DB_PASSWORD=
 
